# redirection-service

./: .dockerignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/app/: handlers.rs  mod.rs
src/database/: error.rs  layer.rs  mod.rs
src/database/scylladb/: mod.rs
src/key_generator/: error.rs  layer.rs  mod.rs
src/key_generator/grpc_generator/: mod.rs
src/task_sender/: layer.rs  mod.rs
src/task_sender/nats/: mod.rs
