[package]
name = "redirection-service"
version = "0.1.0"
authors = ["Pablo Esteban <pab.est.pe@gmail.com>"]
edition = "2024"
description = "service for creating shortened urls and redirecting to the original one when the shortened url is requested"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/tinyurl-pestebani/redirection-service"


[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
async-nats = "0.42.0"
bytes = "1.10.1"
scylla = { version = "1.3.1", features = ["metrics"] }
tokio = { version = "1.47.1", features = ["rt", "macros", "rt-multi-thread", "signal"] }
async-trait = "0.1.89"
futures = "0.3.31"
openssl = { version = "0.10.73", features = ["vendored"] }
rust-otel-setup = { git = "https://github.com/tinyurl-pestebani/rust-otel-setup.git" }
rust-proto-pkg = { git = "https://github.com/tinyurl-pestebani/rust-proto-pkg.git" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
prost = "0.13.5"
prost-types = "0.13.5"
thiserror = "2.0.16"
tonic = "0.13.1"
tonic-tracing-opentelemetry = "0.29.0"
tracing = "0.1.41"
tower = "0.5.2"

[dev-dependencies]
mockall = "0.13.1"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
