[package]
name = "redirection-service"
version = "0.1.8"
authors = ["Pablo Esteban <pab.est.pe@gmail.com>"]
edition = "2024"
description = "service for creating shortened urls and redirecting to the original one when the shortened url is requested"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/tinyurl-pestebani/redirection-service"


[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
async-nats = "0.45.0"
bytes = "1.10.1"
scylla = { version = "1.4.1", features = ["metrics"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread", "signal"] }
async-trait = "0.1.89"
futures = "0.3.31"
openssl = { version = "0.10.74", features = ["vendored"] }
rust-otel-setup = { git = "https://github.com/tinyurl-pestebani/rust-otel-setup.git" , tag = "v0.1.3" }
rust-proto-pkg = { git = "https://github.com/tinyurl-pestebani/rust-proto-pkg.git" , tag = "v0.1.1"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
prost = "0.14.1"
prost-types = "0.14.1"
thiserror = "2.0.17"
tonic = "0.14.2"
tonic-tracing-opentelemetry = "0.32.0"
tracing = "0.1.41"
tower = "0.5.2"

[dev-dependencies]
mockall = "0.14.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
